--- a/rubocop.yml
+++ b/rubocop.yml
@@ -1,10 +1,9 @@
 AllCops:
   NewCops: enable
   Exclude:
-    - 'Guardfile'
-    - 'Rakefile'
-    - 'node_modules/**/*'
-    - '/solver_spec.rb'
+    - "Guardfile"
+    - "Rakefile"
+    - "node_modules/**/*"
 
   DisplayCopNames: true
 
@@ -19,6 +18,7 @@ Metrics/ClassLength:
 Metrics/BlockLength:
   IgnoredMethods: ['describe']
   Max: 30
+
 
 Style/Documentation:
   Enabled: false
